# elastic_mongo

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  IMPROVEMENTS.md  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml  vision.md
.github/workflows/: ci.yml
src/stream_catalog/: __init__.py  config.py
src/stream_catalog/api/: __init__.py  app.py  dependencies.py  errors.py  schemas.py
src/stream_catalog/api/routers/: admin.py  health.py  search.py  titles.py  watchlists.py
src/stream_catalog/application/: __init__.py  catalog_service.py  commands.py  reindex_service.py  search_service.py  watchlist_service.py
src/stream_catalog/domain/: __init__.py  entities.py  errors.py  ports.py  search.py  value_objects.py
src/stream_catalog/infrastructure/: __init__.py  retry.py
src/stream_catalog/infrastructure/elasticsearch/: __init__.py  mapping.py  search_index.py
src/stream_catalog/infrastructure/mongo/: __init__.py  mappers.py  title_repository.py  watchlist_repository.py
tests/integration/: conftest.py  test_api_e2e.py  test_mongo_repositories.py  test_search_index.py
tests/unit/: factories.py  fakes.py  test_catalog_service.py  test_entities.py  test_retry.py  test_search_and_reindex.py  test_value_objects.py  test_watchlist_service.py
