[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-catalog-api"
version = "0.1.0"
description = "Media catalog & search API — a DDD showcase built on MongoDB and Elasticsearch"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Maxim Maslin", email = "zapzarap@yandex.ru" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "motor>=3.5",
    "elasticsearch[async]>=8.14,<9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires running MongoDB and Elasticsearch (docker compose up mongo elasticsearch)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "ASYNC",  # async pitfalls
    "RET",    # return statements
    "PL",     # pylint subset
    "RUF",    # ruff-specific
]
ignore = [
    "PLR0913",  # many arguments: commands/entities legitimately carry many fields
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]  # magic values are fine in assertions

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["motor.*"]
ignore_missing_imports = true
